    its current version.
  - now compatible with additional servers (fixed some SyncML
    protocol issues, added support for sending device
    information)
  - revised API of the client library
  - #305795: for tasks the "text/x-todo" type from the configuration
    was sent to servers instead of the correct "text/calendar"
    provided by SyncEvolution itself
* updated default syncml/config.txt:
  - firstTimeSyncMode has never been implemented in the library,
    removed its documentation,
  - added documentation for userAgent
* changed vCard parser to make it compatible with servers
  which send a verbatim semicolon as part of properties where
  the semicolon has no special meaning
* If minor errors occur like not being able to insert an
  item at the client or server side, then it is reported in the
  log and output, but the next synchronization will be a normal
  synchronization, not a forced slow one as in previous versions.
  The old approach ensured that the problem was noticed and fixed,
  but required user assistance. With the new approach synchronization
  continues to work, although without fixing the root cause of
  the problem.
* Workaround for bug in Evolution 2.0.6 (and perhaps other versions):
  for calendars and task lists not all deleted items were reported
  at once thus a single synchronization would only tell the server
  about a subset of the changes. Repeating the synchronization would
  eventually be told of all changes, so now this repetition is built
  into the code which queries for changes and a single synchronization
  is sufficient as it should be.



SyncEvolution 0.3, 2006-06-27
-----------------------------

* added syncing of calendars and tasks as iCalendar 2.0
* added syncing of contacts as vCard 3.0
* tested extensively with sync.scheduleworld.com and
  added an example configuration for it
* uses C++ client library revision "wmplugin_3_0_20"
  which contains several bug fixes, among them proper